[test] StatusBarKtTest: my first Composable function unit tests!
👨🏻‍🦲 miss you Greg